# bah-MC-rs

./: .gitignore  Cargo.toml  build.rs  config.json
.cargo/: config.toml
java/: build.gradle  gradle.properties.txt
java/src/main/java/com/duck/bahmod/: BAHMod.java  Server.java  com_duck_bahmod_Server.h
java/src/main/java/com/duck/bahmod/commands/: BAHAdd.java  BAHDel.java
java/src/main/resources/: mcmod.info
java/src/main/resources/assets/BAHMOD/lang/: en_us.lang
src/: lib.rs  main.rs
