cargo-features = ["strip"]
[package]
name = "forge_mod"
version = "0.1.0"
authors = ["Duck Quack <duckquack123321@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.68"  }
simd-json = {version = "0.4.8" }
lazy_static = "1.4.0"
reqwest = {version = "0.11.6", features = ["blocking"]}
rayon = "1.5.1"
num_cpus = "1.13.0"
snmalloc-rs = {version = "0.2.28", features = ["native-cpu"]}
jni = "0.19.0"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
debug = 0
strip = "symbols"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = 0
incremental = false

[lib]
crate_type = ["cdylib"]